# doculens-ai

./: .dockerignore  .env.example  .env.showcase.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: backend-ci.yml
app/: alembic.ini  main.py  makemigration.sh  migrate.sh  requirements.txt  start.sh
app/alembic/: env.py
app/api/: auth_router.py  dependencies.py  endpoint.py  event_schema.py  router.py
app/config/: celery_config.py  database_config.py  llm_config.py  settings.py
app/core/: base.py  llm.py  observability.py  pipeline.py  router.py  schema.py  task.py  validate.py
app/database/: __init__.py  event.py  models.py  session.py  user.py
app/doc_utils/: chunking.py  embedding.py  extraction.py  search.py
app/evaluation/: __init__.py  retrieval.py
app/pipelines/: doculens_pipeline.py  registry.py
app/prompts/: document_classification.j2  document_routing.j2  (+3 more)
config/: __init__.py  settings.py
docker/: Caddyfile.showcase  Dockerfile.api  Dockerfile.celery  Dockerfile.frontend  docker-compose.showcase.yml  docker-compose.yml
docs/: deploy-showcase.md  deploy-static-showcase.md  design-system.md  engineering-notes.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
requests/: send_event.py
scripts/: backend_smoke.sh  dev_stack.sh  dev_stack_stop.sh
tests/: conftest.py  test_api_endpoints.py  test_dashboard_insights.py  test_demo_workspace.py  test_retrieval_evaluation.py  test_semantic_search_node.py  test_settings.py
(+80 files in other folders)
