[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "doculens-ai"
version = "1.0.0"
description = "Production-oriented document intelligence and retrieval platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.13.1",
  "anthropic==0.31.2",
  "celery==5.4.0",
  "docling==2.95.0",
  "fastapi==0.111.1",
  "instructor==1.4.0",
  "openai>=1.40,<2",
  "pandas==2.2.3",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==3.1.7",
  "psycopg2-binary==2.9.9",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "python-jose[cryptography]==3.3.0",
  "python-frontmatter==1.1.0",
  "python-multipart>=0.0.18,<1",
  "redis==5.0.3",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0,<3",
  "tiktoken>=0.8,<1",
  "timescale-vector==0.0.7",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pre-commit>=4,<5",
  "pyright>=1.1.400,<2",
  "pytest==8.3.3",
  "pytest-cov>=6,<7",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = ["app/alembic/versions"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "F401"]

[tool.pyright]
pythonVersion = "3.11"
include = ["app", "tests"]
reportMissingTypeStubs = false
